@@ -114,6 +114,7 @@ All (GUI):
 - Harmonize wxMenuEvent handling between all major ports.
 - Fix wxPGChoices copy ctor (Snoits).
 - Show how to handle files on command line in docview sample (Neil Mayhew).
+- Improve wxFileCtrl::SetFilename() and SetPath() (Kevin B. McCarty).
 
 wxGTK:
 
